modified comments next page

--- a/Crawler_TripAdvisor_comments_requests_selenium.ipynb
+++ b/Crawler_TripAdvisor_comments_requests_selenium.ipynb
@@ -48,7 +48,8 @@
     "            \n",
     "        try:\n",
     "            restUrl='https://www.tripadvisor.com.tw'+restTags['href']            \n",
-    "            k=1\n",
+    "            k=1 # 記錄評論頁數\n",
+    "            \n",
     "            while k!=0: # 進入餐廳網頁後，依次爬取每一頁的評論\n",
     "                print('嘗試載入第{}頁'.format(k))\n",
     "                print(restName)\n",
@@ -57,41 +58,45 @@
     "                try:\n",
     "                    ss = requests.session()\n",
     "                    restRes = ss.get(restUrl,headers=headers)\n",
-    "                    restSoup=BeautifulSoup(restRes.text, 'html.parser')\n",
-    "                    restName=restSoup.select('h1[class=\"_3a1XQ88S\"]')[0].text\n",
+    "                    restSoup = BeautifulSoup(restRes.text, 'html.parser')\n",
+    "                    restName = restSoup.select('h1[class=\"_3a1XQ88S\"]')[0].text\n",
     "                    for commentList in restSoup.select('div[class=\"rev_wrap ui_columns is-multiline\"]'):\n",
-    "                        commenter=commentList.select('div[class=\"info_text pointer_cursor\"]')[0].text\n",
-    "                        commentRating=commentList.select('div[class=\"ui_column is-9\"] span')[0]['class'][1].split('bubble_')[-1]\n",
-    "                        commentTitle=commentList.select('span[class=\"noQuotes\"]')[0].text\n",
-    "                        comment=commentList.select('p[class=\"partial_entry\"]')[0].text\n",
+    "                        commenter = commentList.select('div[class=\"info_text pointer_cursor\"]')[0].text\n",
+    "                        commentRating = commentList.select('div[class=\"ui_column is-9\"] span')[0]['class'][1].split('bubble_')[-1]\n",
+    "                        commentTitle = commentList.select('span[class=\"noQuotes\"]')[0].text\n",
+    "                        comment = commentList.select('p[class=\"partial_entry\"]')[0].text\n",
     "#                         print(restName)\n",
     "                        print(commenter)\n",
     "#                         print(str(int(commentRating)/10))\n",
     "#                         print(commentTitle)\n",
     "#                         print(comment)\n",
     "#                         print('------')\n",
-    "                        with open('./restComments1_csv/comments1.csv', 'a', newline='', encoding='utf_8_sig') as csv_file:\n",
-    "                              fieldnames = ['餐廳名稱','評論賬號','評論分數','評論標題','評論內容']\n",
-    "                              csv_w = csv.DictWriter(csv_file, fieldnames=fieldnames, delimeter=',')\n",
-    "                              csv_w.writerow({'餐廳名稱': restName,\\\n",
-    "                                              '評論賬號': commenter,\\\n",
-    "                                              '評論分數': str(int(commentRating)/10),\\\n",
-    "                                              '評論標題': commentTitle,\\\n",
-    "                                              '評論內容': comment})\n",
-    "#                             f.write('評論帳號: '+commenter+'\\n')\n",
-    "#                             f.write('評論分數: '+str(int(commentRating)/10)+'\\n')\n",
-    "#                             f.write('評論標題: '+commentTitle+'\\n')\n",
-    "#                             f.write('評論內容: '+comment+'\\n')\n",
-    "#                             f.write('------'+'\\n')\n",
+    "#                         with open('./restComments1_csv/comments1.csv', 'a', newline='', encoding='utf_8_sig') as csv_file:\n",
+    "#                               fieldnames = ['餐廳名稱','評論賬號','評論分數','評論標題','評論內容']\n",
+    "#                               csv_w = csv.DictWriter(csv_file, fieldnames=fieldnames, delimeter=',')\n",
+    "#                               csv_w.writerow({'餐廳名稱': restName,\\\n",
+    "#                                               '評論賬號': commenter,\\\n",
+    "#                                               '評論分數': str(int(commentRating)/10),\\\n",
+    "#                                               '評論標題': commentTitle,\\\n",
+    "#                                               '評論內容': comment})\n",
+    "                        with open('./restComments1/{}.txt'.format(restName), 'a', encoding='utf-8') as f:\n",
+    "                                f.write('評論帳號: '+commenter+'\\n')\n",
+    "                                f.write('評論分數: '+str(int(commentRating)/10)+'\\n')\n",
+    "                                f.write('評論標題: '+commentTitle+'\\n')\n",
+    "                                f.write('評論內容: '+comment+'\\n')\n",
     "                    print('當前評論網址： ' + restUrl)\n",
-    "                    newRestUrl='https://www.tripadvisor.com.tw'+restSoup.select('a[class=\"nav next ui_button primary\"]')[0]['href']\n",
-    "                    restUrl=newRestUrl\n",
-    "                    print('載入成功，' + restName + '留言第' + str(k) + '頁***' + '\\n')    \n",
+    "                    print('載入成功，' + restName + '留言第' + str(k) + '頁***' + '\\n')\n",
+    "                    print('==========================')\n",
     "                    k=k+1\n",
+    "                    newRestUrl = 'https://www.tripadvisor.com.tw/' + restSoup.select('div[class=\"unified ui_pagination\"] a')[1]['href']\n",
+    "#                     newRestUrl='https://www.tripadvisor.com.tw'+restSoup.select('a[class=\"nav next ui_button primary\"]')[0]['href']\n",
+    "                    restUrl=newRestUrl\n",
+    "                    print(restUrl)\n",
     "                    time.sleep(random.randint(1, 2)) # 每爬完一頁評論，休息一次\n",
     "                except:\n",
     "                    k=0\n",
-    "                    print(restName + 'has no more comments') \n",
+    "                    print(restName + 'has no more comments')\n",
+    "                    print('==========================')\n",
     "        except IndexError:\n",
     "            print(IndexError)\n",
     "            break\n",
